--- a/src/assets/components-props-events.css
+++ b/src/assets/components-props-events.css
@@ -51,8 +51,8 @@ body {
   line-height: 1.4em;
   background: #f5f5f5;
   color: #111;
-  min-width: 230px;
-  max-width: 550px;
+  min-width: 550px;
+  max-width: 100%;
   margin: 0 auto;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
