--- a/src/style.css
+++ b/src/style.css
@@ -60,7 +60,7 @@ button:focus-visible {
 
 #app {
   max-width: 1280px;
-  margin: 0 auto;
+  margin-right: 400px;
   padding: 2rem;
   text-align: center;
 }
